Adding coverage reports.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,4 +17,16 @@
 		</testsuite>
 	</testsuites>
 
+	<filter>
+		<whitelist>
+			<directory>./src</directory>
+		</whitelist>
+	</filter>
+
+	<logging>
+		<log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
+		<log type="coverage-html" target="build/logs/html"/>
+		<log type="coverage-clover" target="build/logs/clover.xml"/>
+		<log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
+	</logging>
 </phpunit>
