Adding a property reference value to make running the examples easier.

--- a/examples/config.php.example
+++ b/examples/config.php.example
@@ -11,3 +11,6 @@ define('NETWORK_ID', 1234);
 
 //the branch ID
 define('BRANCH_ID', 12345);
+
+//the a property ID
+define('PROPERTY_ID', 'PROP_1');
