--- a/examples/config.php.example
+++ b/examples/config.php.example
@@ -9,6 +9,9 @@ define('CERT_PASS', 'mypassword');
 //the network ID
 define('NETWORK_ID', 1234);
 
+//the brand ID
+define('BRAND_ID', 1234);
+
 //the branch ID
 define('BRANCH_ID', 12345);
 
