--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
 		"frozensheep/synthesize": "1.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "5.1.*",
+		"phpunit/phpunit": "5.1.*"
 	},
 	"autoload": {
 		"psr-4": {
 			"Frozensheep\\RightmoveADF\\": "src"
 		}
-	}
+	},
 	"autoload-dev": {
 		"psr-4": {
 			"Frozensheep\\RightmoveADF\\Tests\\": "tests"
